--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "openai": "^4.0.0",
-    "uuid": "^9.0.1"
+    "openai": "^4.47.1",
+    "uuid": "^9.0.1",
+    "better-sqlite3": "^9.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
