--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30",
-    "@types/uuid": "^9.0.8",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  }
+  "@types/better-sqlite3": "^7.6.8",
+  "@types/cors": "^2.8.17",
+  "@types/express": "^4.17.21",
+  "@types/node": "^20.11.30",
+  "@types/uuid": "^9.0.8",
+  "ts-node": "^10.9.2",
+  "typescript": "^5.4.5"
+}
+
 }
